src/test/ui/feature-gate/unstable-attribute-allow-issue-0.stderr
error[E0545]: `issue` must be a numeric string or "none"
  --> $DIR/unstable-attribute-allow-issue-0.rs:12:47
   |
LL | #[unstable(feature = "unstable_test_feature", issue = "something")]
   |                                               ^^^^^^^^-----------
   |                                                       |
   |                                                       invalid digit found in string

error: aborting due to previous error

